Add check win button

--- a/connectfour.html
+++ b/connectfour.html
@@ -88,7 +88,9 @@
 
 </table>
 </div>
-
+<div class="center">
+  <button class="winbutton">Declare Victory</button>
+</div>
 
 <!-- </body> -->
 </html>
