--- a/connectfour.html
+++ b/connectfour.html
@@ -22,7 +22,7 @@
 </head>
 
 <!-- <body> -->
-
+<h2 class="center">Connect Four!</h2>
 <div class="board center">
 
   <table>
@@ -88,7 +88,7 @@
 
 </table>
 </div>
-<div class="center">
+<div class="butt center">
   <button class="winbutton">Declare Victory</button>
 </div>
 
